Update navigation bug when scrolling on mobile browser.

--- a/themes/briev/css/style.css
+++ b/themes/briev/css/style.css
@@ -16,6 +16,10 @@ a {
 	cursor: pointer !important;
 }
 
+.no-overflow {
+	overflow-y: hidden !important
+}
+
 .global {
 	width: 100%;
 	min-height: 100%;
